--- a/gammSlice.Rmd
+++ b/gammSlice.Rmd
@@ -226,21 +226,8 @@ summary(fit1)
 是每个链的样本自相关函数，以更加一般的方式评估每个滞后期链的相关性。第五列是每个参数
 后验密度函数的核估计，第六列是基于相关链的数值总结。
 
-```{r fig1,fig.cap="基于MCMC抽样的简单logistic回归模型的信息总结,dev="png"}
-set.seed(39402)
-m<-100
-n<-2
-beta0True<-0.5
-betaxTrue<-1.7
-sigsqTrue<-0.8
-idnum<-rep(1:m,each=n)
-x<-runif(m*n)
-U<-rep(rnorm(m,0,sqrt(sigsqTrue)),each=n)
-mu<-1/(1+exp(-(beta0True+betaxTrue*x+U)))
-y<-rbinom((m*n),1,mu)   
-library(gammSlice)
-fit1<-gSlc(y~x,random=list(idnum=~1),family="binomial") 
-summary(fit1)
+```{r fig1,eval=T,echo=F,fig.cap="基于MCMC抽样的简单logistic回归模型的信息总结",dev="png",results='markup', cache=F}
+knitr::include_graphics(".\\results\\fig1-logistic.png")
 ```
 
 图 \@ref(fig:fig1) 中2-4列显示了MCMC收敛的迹象，看起来相当好：跟踪图显示没有趋势，滞后一期的相关系数
@@ -405,20 +392,13 @@ points(x,y)
 使用额外的ad hoc R命令增加 $f$ 曲线和图例，将其设置为虚线。从gSlc()可以看出
 在这个例子中f的估计相当好。
 
-```{r fig2,fig.cap="有效自由度的MCMC输出信息汇总",dev="png}
-set.seed(53902)
-n<-400
-x<-runif(n)
-y<-rpois(n,exp(cos(4*pi*x)+2*x-1))   
-fit2<-gSlc(y~s(x),family="poisson")
-summary(fit2)
+```{r fig2,eval=T, echo=F,fig.cap="有效自由度的MCMC输出信息汇总",dev="png",results='markup', cache=F}
+knitr::include_graphics(".\\results\\fig2-poisson.png")
 ```
 
-```{r fig3,fig.cap="贝叶斯后验密度均值和95%的置信区间",dev="png"}
-par(mfrow=c(1,2))
-#plot(fit2)
-plot(fit2,responseScale=TRUE)
-points(x,y)
+
+```{r fig3,eval=T, echo=F,fig.cap="贝叶斯后验密度均值和95%的置信区间",dev="png",results='markup', cache=F}
+knitr::include_graphics(".\\results\\fig2-poisson1.png")
 ```
 
 ## 半参数logistic回归
@@ -456,16 +436,8 @@ summary(fit3)
 
 图 \@ref(fig:fig4) 显示了summary(fit3)的结果。MCMC收敛对于关键参数 $\beta_{x1}$ 是很好的，对于 $f(x_2)$ 组成成分的有效自由度也是合理的。
 
-```{r fig4,fig.cap="基于切片MCMC抽样的信息总结",dev="png}
-set.seed(981127)
-n<-500
-betax1True<-0.5
-x1<-sample(c(0,1),n,replace=TRUE)
-x2<-runif(n)
-mu<-1/(1+exp(-(betax1True*x1+sin(2*pi*x2))))
-y<-rbinom(n,1,mu)
-fit3<-gSlc(y~x1+s(x2),family="binomial")
-summary(fit3)
+```{r fig4,eval=T, echo=F,fig.cap="基于切片MCMC抽样的信息总结",dev="png",results='markup', cache=F}
+knitr::include_graphics(".\\results\\fig3-semi_logistic.png")
 ```
 
 最后，$f$ 的估计的可视化可以使用：
@@ -478,8 +450,8 @@ plot(fit3)
 的预测变量的拟合，所有其他的预测变量设置成它们的样本均值。图5显示我们绘制的是针对
 $x_2$ 的 $\beta_x|\bar{x}_1+f(x_2)$ 的贝叶斯估计，其中 $\bar{x}_1$ 是 $x_{1i}$ 的均值。
 
-```{r fig5,fig.cap="f的贝叶斯后验均值估计及95%置信区间",dev="png"}
-plot(fit3)
+```{r fig5,eval=T, echo=F,fig.cap="f的贝叶斯后验均值估计及95%置信区间",dev="png",results='markup', cache=F}
+knitr::include_graphics(".\\results\\fig3-semi_logistic1.png")
 ```
 
 ## 泊松可加混合模型
@@ -539,25 +511,14 @@ plot(fit4)
 图\@ref(fig:fig6)显示了summary(fit4)的结果。在默认MCMC样本量的情况下显示出很好的收敛性。
 $\sigma^2$ 95%的置信区间是 $(0.535,0.975)$ ，接近我们产生的数据集中包括的1值。
 
-```{r fig6,fig.cap="基于切片MCMC抽样的模型拟合信息总结",dev="png"}
-set.seed(2966703)
-m<-100
-n<-10
-x1<-runif(m*n)
-x2<-runif(m*n)
-idnum<-rep(1:m,each=n)
-sigsqTrue<-1
-U<-rep(rnorm(m,0,sqrt(sigsqTrue)),each=n)
-mu<-exp(U+cos(4*pi*x1)+2*x1+sin(2*pi*x2^2))
-y<-rpois(m*n,mu)
-fit4<-gSlc(y~s(x1)+s(x2),random=list(idnum=~1),family="poisson")
-summary(fit4)
+```{r fig6,eval=T, echo=F,fig.cap="基于切片MCMC抽样的模型拟合信息总结",dev="png",results='markup', cache=F}
+knitr::include_graphics(".\\results\\fig4-poisson_mix.png")
 ```
 
 高的有效自由度反映出拟合函数部分的非线性性。非线性效应在图 \@ref(fig:fig7)中进一步加强。
 
-```{r fig7,fig.cap="f1和f2的贝叶斯后验均值估计及95%的置信区间",dev="png"}
-plot(fit4)
+```{r fig7,eval=T, echo=F,fig.cap="f1和f2的贝叶斯后验均值估计及95%的置信区间",dev="png",results='markup', cache=F}
+knitr::include_graphics(".\\results\\fig4-poisson_mix1.png")
 ```
 
 # 精准预测
@@ -643,13 +604,8 @@ summary(fitTN)
 的后验均值是0.767,95%的置信集是 $(1.87\times10^{-7},0.670)$。这个结果和图\@ref(fig:fig10)、11中统计
 显著交互效应是一致的。
 
-```{r fig10,fig.cap="基于切片MCMC抽样拟合logistic混合模型的信息汇总",dev="png"}
-data("toenail")
-terbXmonths<-toenail[,"terb"]*toenail[,"months"]
-toenailPlus<-cbind(toenail,terbXmonths)
-head(toenailPlus)
-fitTN<-gSlc(onycholysis~terb+months+terbXmonths,random=list(idnum=~1),data=toenailPlus,family="binomial")
-summary(fitTN)
+```{r fig10,eval=T, echo=F,fig.cap="基于切片MCMC抽样拟合logistic混合模型的信息汇总",dev="png",results='markup', cache=F}
+knitr::include_graphics(".\\results\\fig5-toenail.png")
 ```
 
 
@@ -691,12 +647,8 @@ summary(fitIR)
 我们得到了图\@ref(fig:fig12)的汇总信息。和Zhao等（2006）的图1是相似的，表明富含维生素A的饮食和
 规则的诊所问诊往往会降低呼吸道感染的风险。
 
-```{r fig12,fig.cap="基于切片MCMC抽样的拟合logistic可加混合模型的信息汇总",dev="png"}
-data("indonRespir")
-head(indonRespir)
-fitIR<-gSlc(respirInfec~s(age)+vitAdefic+female+height+stunted+visit2+visit3+visit4+visit5+visit6,
-            random=list(idnum=~1),family="binomial",data=indonRespir)
-summary(fitIR)
+```{r fig12,eval=T, echo=F,fig.cap="基于切片MCMC抽样的拟合logistic可加混合模型的信息汇总",dev="png",results='markup', cache=F}
+knitr::include_graphics(".\\results\\fig6-disease.png")
 ```
 
 
@@ -710,8 +662,8 @@ plot(fitIR,responseScale=TRUE)
 一个更简单的模型，就像没有惩罚样条的广义线性模型，也不会发现非线性的年龄效应。
 因此，广义可加混合模型提供了一个更加全面更深刻的分析。
 
-```{r fig13,fig.cap="f(age)的贝叶斯后验均值估计及95%的置信区间",dev="png"}
-plot(fitIR,responseScale=TRUE)
+```{r fig13,eval=T, echo=F,fig.cap="f(age)的贝叶斯后验均值估计及95%的置信区间",dev="png",results='markup', cache=F}
+knitr::include_graphics(".\\results\\fig6-disease.png")
 ```
 
 # 扩展
