--- a/面板模型和混合模型的区别.Rmd
+++ b/面板模型和混合模型的区别.Rmd
@@ -53,7 +53,8 @@ Sys.setlocale("LC_ALL", "Chinese")
 
 ## 面板数据模型
 
-面板数据模型分为混合模型、固定效应模型和随机效应模型。假设 $i=1,2,\cdots,N;t=1,2,\cdots,T$，其中 $i$ 表示第 $i$  个个体，$T$ 表示时间。以下分析均以中国31个省份为例。
+面板数据模型分为混合模型、固定效应模型和随机效应模型。假设 $i=1,2,\cdots,N;t=1,2,\cdots,T$，
+其中 $i$ 表示第 $i$  个个体，$T$ 表示时间。以下分析均以中国31个省份为例。
 
 ### 混合效应模型
 
@@ -113,23 +114,35 @@ $v_i$、$v_t$ 表示第 $i$ 个省份第 $t$ 年的随机差异。
 
 $$y_{it}=\alpha_i+\beta_iX_{it}+\epsilon_{it}$$
 
-$\alpha_i$、$\beta_i$ 表示每个省份线性回归方程的截距项和斜率项都不相同。即，无论是截距项还是斜率项，对于不同的省份，每个省份都有一个回归方程。而固定效应模型和随机效应模型在斜率项都是相同的，截距项不同，两者的区别在于截距项和自变量是否相关，不相关的为随机效应模型，相关的为固定效应模型。
+$\alpha_i$、$\beta_i$ 表示每个省份线性回归方程的截距项和斜率项都不相同。即，无论是
+截距项还是斜率项，对于不同的省份，每个省份都有一个回归方程。而固定效应模型和随机效应
+模型在斜率项都是相同的，截距项不同，两者的区别在于截距项和自变量是否相关，不相关的
+为随机效应模型，相关的为固定效应模型。
 
 ## 混合模型
 
 方差分析中主要有三种模型，固定效应模型、随机效应模型和混合模型
 
-固定效应模型表示打算比较的就是这几组。比如，比较31个省份的经济发展水平，目的是为了比较31个省，固定的含义在于31个省是固定的，不是随机选择的。固定效应是假设为常数的参数。
+固定效应模型表示打算比较的就是这几组。比如，比较31个省份的经济发展水平，目的是为了
+比较31个省，固定的含义在于31个省是固定的，不是随机选择的。固定效应是假设为常数的参数。
 
-随机效应模型表示打算比较的不仅是选中的几个省，而是想通过这几个省的比较，推广到它们所能代表的总体中去。比如，选取北京市、湖北省、山西省比较其经济发展水平，目的不是比较这三个地区的经济发展差异，而是它们所代表的发达、欠发达、不发达地区的经济发展差异。随机的含义是指，北京、湖北、山西是从31个省中随机抽取出来的。随机效应模型是把原来经典线性模型的回归系数看作是随机变量。随机效应的参数是根据联合多元正态分布在0附近随机变化的参数。
+随机效应模型表示打算比较的不仅是选中的几个省，而是想通过这几个省的比较，推广到它们
+所能代表的总体中去。比如，选取北京市、湖北省、山西省比较其经济发展水平，目的不是比较
+这三个地区的经济发展差异，而是它们所代表的发达、欠发达、不发达地区的经济发展差异。
+随机的含义是指，北京、湖北、山西是从31个省中随机抽取出来的。随机效应模型是把原来
+经典线性模型的回归系数看作是随机变量。随机效应的参数是根据联合多元正态分布在0附近
+随机变化的参数。
 
-混合模型，既有固定效应，也有随机效应。模型中一部分系数是固定的，一部分系数是随机的，就是混合模型。其一般表达方式为：
+混合模型，既有固定效应，也有随机效应。模型中一部分系数是固定的，一部分系数是随机的，
+就是混合模型。其一般表达方式为：
 
 $$y_{it}=\beta_1x_{1ij}+\cdots+\beta_px_{pij}+b_1z_{1ij}+\cdots+b_pz_{pij}+\epsilon_{ij} \\
 b_{ik}\sim N(0,\psi_k^2),\quad Cov(b_k,b_{k^\prime})=\psi_{kk^\prime} \\
 \epsilon_{ij}\sim N(0,\sigma^2\lambda_{ijj}),\quad Cov(\epsilon_{ii},\epsilon_{ij^\prime})=\sigma^2\lambda_{ijj^\prime}$$
 
-$x_1,\cdots,x_p$ 是固定效应部分，$z_1,\cdots,z_p$ 是随机效应部分，假定服从正态分布。随机效应的协方差系数 $\psi_{kk^\prime}$ 假定是常数。第 $i$ 组中误差的协方差是 $\sigma^2\lambda_{ijj^\prime}$，$\lambda_{ijj^\prime}$ 代表每个组之间的误差项相关系数。
+$x_1,\cdots,x_p$ 是固定效应部分，$z_1,\cdots,z_p$ 是随机效应部分，假定服从正态分布。
+随机效应的协方差系数 $\psi_{kk^\prime}$ 假定是常数。第 $i$ 组中误差的协方差是
+$\sigma^2\lambda_{ijj^\prime}$，$\lambda_{ijj^\prime}$ 代表每个组之间的误差项相关系数。
 
 # 以中国31个省市的数据为例进行分析
 
@@ -230,9 +243,17 @@ plmtest(pdata.me,effect="time",type="honda")   ##不拒绝原假设
 
 ```
 
-以上程序分别建立了混合模型、固定效应模型和随机效应模型。经检验，F检验拒绝原假设，说明不应该建立混合模型，Hausman检验不拒绝原假设，说明应该建立随机效应模型。其结果如表\@ref(tab:tab5)所示。
+以上程序分别建立了混合模型、固定效应模型和随机效应模型。经检验，F检验拒绝原假设，
+说明不应该建立混合模型，Hausman检验不拒绝原假设，说明应该建立随机效应模型。其结果
+如表\@ref(tab:tab5)所示。
 
-根据以上结果，面板数据混合模型表明，所有省份在所有时间上回归方程都相同，结果为一个回归方程。个体固定效应模型表明，每个省份都有不同的截距项，系数 $\beta$ 相同，可以建立31个不同的方程。时点固定效应模型表明，在每个时间点上有不同的截距项，系数 $\beta$ 相同，可以建立21个不同的方程。个体时点双固定效应模型表明，每个省份在每个时点的截距都不同，系数 $\beta$ 相同，可以建立 `r 21*31` 个不同的方程。随机效应模型与固定效应模型对应类别的解释相同。变系数模型表明，每个省份在每个时间点的截距和斜率都不同，可以建立 `r 21*31` 个不同的方程。
+根据以上结果，面板数据混合模型表明，所有省份在所有时间上回归方程都相同，结果为
+一个回归方程。个体固定效应模型表明，每个省份都有不同的截距项，系数 $\beta$ 相同，
+可以建立31个不同的方程。时点固定效应模型表明，在每个时间点上有不同的截距项，
+系数 $\beta$ 相同，可以建立21个不同的方程。个体时点双固定效应模型表明，每个省份
+在每个时点的截距都不同，系数 $\beta$ 相同，可以建立 `r 21*31` 个不同的方程。
+随机效应模型与固定效应模型对应类别的解释相同。变系数模型表明，每个省份在每个时间点
+的截距和斜率都不同，可以建立 `r 21*31` 个不同的方程。
 
 ## 线性混合模型
 
@@ -240,7 +261,12 @@ plmtest(pdata.me,effect="time",type="honda")   ##不拒绝原假设
 
 $$\text{gdp}_{it}=\beta_0+\beta_1\text{capital}_{it}+\beta_2\text{labor}_{it}+\beta_3\text{edu}_{it}+b_{i0}+b_{i1}\text{capital}_{it}+b_{i2}\text{edu}_{it}$$
 
-其中，$\beta_0$，$\beta_1$，$\beta_2$，$\beta_3$ 是固定效应部分，对每个省每个时间点都相同，是整体效应。$b_{i0}$，$b_{i1}$，$b_{i2}$ 是随机效应部分，分别表示截距项，$\text{capital}$、$\text{edu}$ 的斜率变动情况，随机效应随地区的不同而不同。$b_{i1}$ 和 $b_{i2}$ 是随机变量并假定其服从多元正态分布。上式表明，$\text{labor}$ 对 $\text{gdp}$ 的作用在每个地区都是一样的，而 $\text{capital}$ 和 $\text{edu}$ 对 $\text{gdp}$ 的作用随地区的不同而不同。
+其中，$\beta_0$，$\beta_1$，$\beta_2$，$\beta_3$ 是固定效应部分，对每个省每个时间点
+都相同，是整体效应。$b_{i0}$，$b_{i1}$，$b_{i2}$ 是随机效应部分，分别表示截距项，
+$\text{capital}$、$\text{edu}$ 的斜率变动情况，随机效应随地区的不同而不同。$b_{i1}$ 和
+$b_{i2}$ 是随机变量并假定其服从多元正态分布。上式表明，$\text{labor}$ 对 $\text{gdp}$
+的作用在每个地区都是一样的，而 $\text{capital}$ 和 $\text{edu}$ 对 $\text{gdp}$ 的作用
+随地区的不同而不同。
 
 ```{r eval=T,ecol=F}
 library(lme4)
